# routes/user/wallet.js
@@ -7,8 +7,10 @@ const {
 const {
   fundsTransfer,
 } = require("../../controllers/user/wallet/fundsTransfer");
+const { getAll } = require("../../controllers/user/wallet/walletTransfer");
 
 router.get("/view/balance", viewWalletBal);
 router.post("/funds/transfer", fundsTransfer);
+router.get("/transfer", getAll);
 
 module.exports = router;
